# reposnap

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  release.yml
src/: collect.py
src/project_content_collector/core/: collector.py  file_system.py  git_repo.py  markdown_generator.py
src/project_content_collector/interfaces/: cli.py
src/project_content_collector/utils/: path_utils.py
src/reposnap/: __init__.py
src/reposnap/controllers/: project_controller.py
src/reposnap/core/: collector.py  content_search.py  file_system.py  git_repo.py  markdown_generator.py
src/reposnap/interfaces/: cli.py  gui.py
src/reposnap/models/: file_tree.py
src/reposnap/utils/: path_utils.py
tests/reposnap/: test_cli.py  test_collected_tree.py  test_collector.py  test_contains_filter.py  test_file_system.py  test_file_tree.py  test_git_repo.py  test_gui.py  test_markdown_generator.py  test_path_utils.py  test_project_controller.py
tests/resources/: another_existing_file.py
tests/test_project_content_collector/: test_cli.py  test_collector.py  test_file_system.py  test_git_repo.py  test_markdown_generator.py  test_path_utils.py
