[project]
name = "project-content-collector"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "agoloborodko" }
]
dependencies = [
    "pathlib>=1.0.1",
    "pathspec>=0.12.1",
    "gitpython>=3.1.43",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project_content_collector"]
